<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lenovo.linkit.MainActivity" >

    <item
        android:id="@+id/action_about"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/about"/>
    
    <item android:id="@+id/action_update"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/update"/>
    
    <item android:id="@+id/action_notification_service"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/notification_setting"/>
    
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/exit"/>
</menu>