<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/main_title_height"
        android:layout_alignParentTop="true"
        android:background="@color/black" >

        <ImageView
            android:id="@+id/top_logo"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/top_logo" />

        <TextView
            android:id="@+id/applicationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/top_logo"
            android:text="@string/app_name"
            android:textColor="@color/app_name_color"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/top_menu" />
    </RelativeLayout>
<!-- 
    <TextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/main_heaer_title"
        android:textColor="#000000"
        android:textSize="20sp" /> -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="301dp"
        android:layout_height="160dp"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:scaleType="fitXY"
        android:src="@drawable/home_img" />

    <ImageView
        android:id="@+id/cloud"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:src="@drawable/cloud" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cloud"
        android:layout_centerHorizontal="true"
        android:background="@color/main_connect_panel_color" >

        <LinearLayout
            android:id="@+id/state_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" 
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/home_ico_phone" />

            <ImageView
                android:id="@+id/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/connet_nol" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/home_ico_pc" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="170dp"
            android:layout_height="39dp"
            android:layout_below="@id/state_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:id="@+id/lenovoid"
            android:background="#0d811e" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="@color/white"
                android:id="@+id/login"
                android:textSize="15sp" />

        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="170dp"
            android:layout_height="39dp"
            android:layout_below="@id/lenovoid"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:id="@+id/btnAction"
            android:background="#0d811e" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/scan_qrcode_connect"
                android:textColor="@color/white"
                android:id="@+id/btnActionText"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="13dp"
                android:src="@drawable/home_ico_qr" />
        </RelativeLayout>
        
         <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_below="@id/btnAction"
                android:id="@+id/btnActionState"
                android:layout_marginTop="10dp"
                android:textSize="12sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/bottom"
            android:background="@color/main_line_color" />

        <RelativeLayout
            android:id="@+id/bottom"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:background="@color/main_iphost_color" >

            <TextView
                android:id="@+id/iphost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/website_promotion"
                android:lineSpacingExtra="5dp"
                android:gravity="center"
                android:textColor="@color/main_iphost_text_color"
                android:textSize="10sp" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>